Use PowerMockitoRule to see coverage of tests.