@@ -60,6 +60,14 @@
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.8.11.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4-rule-agent</artifactId>
+			<version>1.6.4</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<properties>
 		<maven.compiler.target>1.7</maven.compiler.target>
@@ -90,6 +98,24 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+				    <argLine>${argLine} -XX:-UseSplitVerifier -Xverify:none</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>${argLine} -XX:-UseSplitVerifier -Xverify:none</argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
